--- a/src/RedisReact/RedisReact/RedisReact.csproj
+++ b/src/RedisReact/RedisReact/RedisReact.csproj
@@ -2,6 +2,7 @@
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
+    <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>
@@ -92,7 +93,7 @@
     <Content Include="img\react-logo.png" />
     <Content Include="img\redis-logo.png" />
     <Content Include="js\app.jsx" />
-    <Content Include="js\components\connections.jsx" />
+    <None Include="js\components\connections.jsx2" />
     <Content Include="js\components\console.jsx" />
     <Content Include="js\components\dashboard.jsx" />
     <Content Include="js\components\keyview.jsx" />
