--- a/src/RedisReact/RedisReact/package.json
+++ b/src/RedisReact/RedisReact/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "author": "= <=>",
     "license": "ISC",
-    "private":  true,
+    "private": true,
     "dependencies": {
         "react": "*",
         "react-tools": "*"
@@ -13,8 +13,12 @@
     "jest": {
         "rootDir": "",
         "scriptPreprocessor": "tests/preprocessor.js",
-        "testFileExtensions": [ "js" ],
-        "unmockedModulePathPatterns": [ "react" ],
+        "testFileExtensions": [
+            "js"
+        ],
+        "unmockedModulePathPatterns": [
+            "react"
+        ],
         "testDirectoryName": "tests/unit"
     },
     "devDependencies": {
@@ -28,10 +32,10 @@
         "gulp-replace": "~0.4.0",
         "gulp-htmlbuild": "~0.4.1",
         "gulp-header": "~1.7.1",
-        "event-stream":  "~3.3.1",
+        "event-stream": "~3.3.1",
         "del": "~1.1.1",
-        "gulp-uglify": "~1.0.1",
-        "gulp-if": "~1.2.4",
+        "gulp-uglify": "~3",
+        "gulp-if": "~2",
         "gulp-grunt": "~0.5.2",
         "gulp-minify-css": "~0.3.8",
         "gulp-useref": "~1.0.1",
